- Fix: [#12093] Staff window tab animation was no longer updating.
- Fix: [#12123] Long server descriptions are not cut off properly.
- Fix: [#12211] Map Generator shows incorrect map sizes (e.g. "150 x 0").
- Fix: [#12221] Map Generation tool doesn't place any trees.
- Fix: [#12285] On-ride photo profit assumes every guest buys one.
- Fix: [#12297] OpenGL renderer causing artifacts.
- Fix: [#12312] Softlock when loading save file via command line fails.
- Fix: [#12486] `set-rct2` has a broken g1.dat check.
- Fix: [#12498] Circus construction ghost does not rotate (original bug).
- Fix: [#12505] Stores selling multiple items can only have the first product advertised.
- Fix: [#12506] Cannot advertise food if there are no rides in the park.
- Fix: [#12533] Track designs list does not use natural sorting.
- Fix: [#12611] 'Monthly Income from ride tickets' in Scenario Editor is removed when park is not free entry.
- Fix: 'j' character has broken kerning (original bug).
- Fix: RCT1 scenarios have more items in the object list than are present in the park or the research list.
- Fix: Brakes keep working during "Brakes failure".
- Fix: Guests maze pathfinding prefers a specific direction (original bug).
- Improved: [#6530] Allow water and land height changes on park borders.
- Improved: [#11390] Build hash written to screenshot metadata.
- Improved: [#3205] Make handymen less likely to get stuck in ride queues.
- Technical: [#8110] OpenRCT2 now uses a single directory name for title sequences instead of three.
- Technical: [#11517] Windows Vista is supported again (libzip regression in the previous release).
- Technical: The required version of macOS has been increased to 10.14 (Mojave) for plugin support.
- Removed: [#11820] Twitch support (relied on a server that has been down for a few years).

0.2.6 (2020-04-17)
------------------------------------------------------------------------
- Feature: [#10925] Show hovered values on finance charts.